fix action button styles create DeviceService disable move on mobile devices fix readme.md

--- a/src/assets/styles/material.scss
+++ b/src/assets/styles/material.scss
@@ -18,6 +18,11 @@
 .mat-form-field {
 	width: 100%;
 	
+	textarea.mat-input-element {
+		padding: 0;
+		margin: 0;
+	}
+	
 	.mat-error + .mat-error {
 		display: none;
 	}
